# veridian

./: .gitignore  README.md  pyproject.toml
tests/: test_guard.py
venv_veridian/: pyvenv.cfg
venv_veridian/Scripts/: activate  activate.bat
veridian/: __init__.py  guard.py  logger.py
